--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,27 @@
 [build-system]
-requires = ["setuptools>=61.0"]
+requires = ["setuptools>=68.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "nade-python"
 version = "0.0.1"
 description = "Nade Protocol prototype (Python)"
-authors = [{name="Florian Griffon"}]
+authors = [{name="Florian Griffon"}, {name="Icing Project"}, {name="STCB"}]
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.11"
 dependencies = [
-    "cryptography>=45.0.0",
-    "numpy>=2.3.0",
+    "cryptography>=45.0.7",
+    "numpy>=2.3.3",
     "dissononce>=0.34.3",
     "PyYAML>=6.0",
     "cffi>=1.17.0"
 ]
 
+[tool.setuptools]
+# you have a package AND a standalone module
+py-modules = ["nade_adapter"]     # include the top-level module too
+include-package-data = true
+
 [tool.setuptools.packages.find]
 where = ["."]
-include = ["mode_a*", "nade_adapter*"]
+include = ["nade/*"]
