File refactor - Modularize business logics

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "nade-python"
 version = "0.0.1"
-description = "Nade Protocol prototype (Python)"
+description = "Nade Protocol (Noise-Authenticated Duplex Encryption) Python Implementation - Including the DryBox Adapter"
 authors = [{name="Florian Griffon"}, {name="Icing Project"}, {name="STCB"}]
 readme = "README.md"
 requires-python = ">=3.11"
@@ -22,4 +22,4 @@ include-package-data = true
 
 [tool.setuptools.packages.find]
 where = ["."]
-include = ["nade*"]
+include = ["nade*", "adapter*"]
