--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "dissononce>=0.34.3",
     "PyYAML>=6.0",
     "cffi>=1.17.0",
+    "liquid-dsp>=1.6.0",
+    "pytest>=8.3.3",
 ]
 
 [tool.setuptools]
