--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,10 +22,10 @@ include-package-data = true
 
 [tool.setuptools.packages.find]
 where = ["."]
-include = ["nade*", "adapter*"]
+include = ["nade", "adapter"]
 
 [project.entry-points."drybox.adapters"]
-nade-python = "nade.adapter.drybox_adapter:Adapter"
+nade-python = "adapter.drybox_adapter:Adapter"
 
 # (optionnel selon runner)
 [project.entry-points."nade.dev"]
