Add Windows support with bundled liquid-dsp DLLs
  - Bundle libliquid.dll (4.0MB) and dependencies for Windows
  - Build with MSYS2/MinGW64, includes FFTW and runtime libraries
  - Add comprehensive Windows support documentation
  - Fix Path scoping bug in cpfsk.py
  - Users can now install on Windows with zero setup

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
 runs
 .idea
 
+# Build artifacts for liquid-dsp (but NOT nade/_vendor which contains bundled DLLs)
+build_temp/
+
+# Allow bundled DLLs and extensions in vendor directory (override global ignores below)
+!nade/_vendor/**/*.dll
+!nade/_vendor/**/*.pyd
+!nade/_vendor/**/*.so
+
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
